Reorganize data directory

--- a/WCV_Collisions_Data/README_072424.md
+++ b/WCV_Collisions_Data/README_072424.md
@@ -1,7 +1,5 @@
-Hi! Here are three items to be placed on GitHub for the GIS Team. 
-
 1. WCV_wildlife.gpkg. A GeoPackage (spatial file using SQLLite) for the initial test data. This can be loaded into ArcGIS Pro and then uploaded to ArcGIS Online, but is not directly accessible by ArcGIS Online. If anyone is familiar with QGIS, it is very easy to load it there as well. My current plan is to load it into ArcGIS Pro and create a feature layer that will be exported to ArcGIS Online. In the future, we might consider a format that can be directly uploaded into ArcGIS Online, like GeoJSON. 
 
 2. 2024_Wildlife_Collisions.qmd. An R Quarto Markup document used to create the GeoPackage. This may be helpful in creating the Python script to import the data. 
 
-3. AnimalsCategorized.txt. An ASCII lookup table to that maps the Common Species Name to one of four vertebrate categories. This will be changed in the future, but should be able to help with the R Quarto Markup document conversion to Python.
+3. AnimalsCategorized.txt (now in subdirectory species_lookup_tables). An ASCII lookup table to that maps the Common Species Name to one of four vertebrate categories. This will be changed in the future, but should be able to help with the R Quarto Markup document conversion to Python.
