--- a/pipeline_cleaning/guest_data_cleanup.ipynb
+++ b/pipeline_cleaning/guest_data_cleanup.ipynb
@@ -321,22 +321,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(523, 37)"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df.shape"
+    "# Drop all rows with NaN values in the Latitude column\n",
+    "df = df.dropna(subset=['Latitude'])\n",
+    "assert df['Latitude'].isnull().sum() == 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Check that there are no rows with NaN values in the Longitude column\n",
+    "assert df['Longitude'].isnull().sum() == 0"
    ]
   },
   {
