--- a/pipeline_cleaning/guest_data_cleanup.ipynb
+++ b/pipeline_cleaning/guest_data_cleanup.ipynb
@@ -280,6 +280,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Target Schema for Mapping\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
