--- a/pipeline_cleaning/guest_data_cleanup.ipynb
+++ b/pipeline_cleaning/guest_data_cleanup.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,11 +11,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Read in an xls file\n",
+    "# Read in an csv file\n",
     "df = pd.read_csv('report_guest_data_va.csv', header=1)"
    ]
   },
