guest data cleanup

--- a/pipeline_cleaning/guest_data_cleanup.ipynb
+++ b/pipeline_cleaning/guest_data_cleanup.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +240,7 @@
        "[5 rows x 37 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -270,7 +270,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -316,7 +316,7 @@
        "np.int64(168)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -349,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -358,7 +358,7 @@
        "array(['Waynesboro (City)'], dtype=object)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -375,11 +375,11 @@
     {
      "data": {
       "text/plain": [
-       "array(['ID', 'TX', 'FL', 'MN', 'VA', 'MD', 'CA', 'NJ', 'NV', 'IL', 'WI',\n",
-       "       'OR', 'MI', 'MT', 'UT', 'KA', 'IN', 'MS', 'OH', 'AK', 'WA', 'MO',\n",
-       "       'VT', 'NY', 'IA', 'AL', 'GA', 'CT', 'OK', 'ME', 'NC', 'NE', 'AR',\n",
-       "       'KY', 'PA', 'RI', 'AB', 'QC', 'BC', 'MB', 'MA', 'SC', 'NM', 'ND',\n",
-       "       'LA', 'SD', 'CO', 'WY', 'AZ'], dtype=object)"
+       "array(['ID', 'TX', 'FL', 'VA', 'MN', 'MD', 'CA', 'NJ', 'IL', 'OR', 'MI',\n",
+       "       'UT', 'IN', 'OH', 'WI', 'WA', 'VT', 'KA', 'NY', 'IA', 'AL', 'GA',\n",
+       "       'AK', 'CT', 'OK', 'ME', 'NC', 'NE', 'AR', 'KY', 'MO', 'PA', 'RI',\n",
+       "       'NV', 'AB', 'QC', 'BC', 'MB', 'MA', 'SC', 'NM', 'ND', 'MT', 'CO',\n",
+       "       'AZ'], dtype=object)"
       ]
      },
      "execution_count": 19,
@@ -389,6 +389,100 @@
    ],
    "source": [
     "df['Rescue State'].unique()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Profiling Disposition"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([nan, 'offered water', 'Syringed water by mouth.', 'put in box',\n",
+       "       'Bottle fed pedialyte to rehydrate', 'none',\n",
+       "       'Put in box and covered', 'Put in empty ice chest',\n",
+       "       'usual first aid', 'water', 'Bowl of Water',\n",
+       "       'Covered and put in box', 'gave it hotdogs', 'nothing',\n",
+       "       'placed in box and transported to humane society',\n",
+       "       'fed water and chicken', 'no', 'FLUIDS', 'deer carcas', 'yes',\n",
+       "       'administered Sub Q Fluids, kept warm',\n",
+       "       'Applied helium gas to re-inflate', 'fed kitten milk',\n",
+       "       'Fed cows milk and cheerios', 'No', 'chicken legs', 'Put in a box',\n",
+       "       'offered water and bird seed', 'Offered water,kale,and apples',\n",
+       "       'fed water',\n",
+       "       \"Painter's tape wrapped around the body, preventing duck from flapping\",\n",
+       "       'kjhgkhg', 'fed caviar', 'eau', 'Transport',\n",
+       "       'Head Injury Protocols', 'sq fluids, metacam (1.5 mg/ml)', 'na',\n",
+       "       'half bottle of milk', 'put in box and driven directly to center',\n",
+       "       'none; brought immediately to rehab', 'brought inside for warmth',\n",
+       "       'put in cardboard pox with a warm towel.', 'immediate transport',\n",
+       "       'kept in box till found a place to take him', 'bread', 'fed bread',\n",
+       "       'None given.', 'Gave little water and some bird seed.',\n",
+       "       'care given. did not hand feed',\n",
+       "       'Provided water in bowl and heated blanket', 'Taken to Vets',\n",
+       "       'oral fluids', 'ORS toegediend, DEX gegeven',\n",
+       "       'water and scratch and mash', 'mouth-to-mouth rescessutation',\n",
+       "       'Rien', 'put in a box', 'gave food',\n",
+       "       'Kept in tank with heating lamp, fed turtle food and worms',\n",
+       "       'warmed and kept in box.', 'voice lessons',\n",
+       "       'Put in container with holes in lid, called rehabber',\n",
+       "       'finder tried to feed whole milk but they would not eat.'],\n",
+       "      dtype=object)"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['Care Given'].unique()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Profiling Patient ID and Case Number (duplicates?)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0      10-0000095\n",
+       "1      10-0000096\n",
+       "2      10-0000106\n",
+       "5      10-0000115\n",
+       "6      10-0000116\n",
+       "          ...    \n",
+       "516    15-0014855\n",
+       "517    15-0064063\n",
+       "518    15-0065571\n",
+       "519    15-0065574\n",
+       "521    17-0007592\n",
+       "Name: Case Number, Length: 355, dtype: object"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['Case Number']"
    ]
   },
   {
