case number duplicates

--- a/pipeline_cleaning/guest_data_cleanup.ipynb
+++ b/pipeline_cleaning/guest_data_cleanup.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +240,7 @@
        "[5 rows x 37 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -270,7 +270,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -316,7 +316,7 @@
        "np.int64(168)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -339,12 +339,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Check that there are no rows with NaN values in the Longitude column\n",
     "assert df['Longitude'].isnull().sum() == 0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Inspecting Jurisdiction and Rescue State Info"
    ]
   },
   {
@@ -456,33 +463,229 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AssertionError",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[20], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Check the Case Number column for duplicates\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mCase Number\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39mduplicated()\u001b[38;5;241m.\u001b[39msum() \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m0\u001b[39m\n",
+      "\u001b[0;31mAssertionError\u001b[0m: "
+     ]
+    }
+   ],
+   "source": [
+    "# Check the Case Number column for duplicates\n",
+    "assert df['Case Number'].duplicated().sum() == 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Case Number</th>\n",
+       "      <th>Patient ID</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>10-0000135</td>\n",
+       "      <td>Blue 234</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>10-0000135</td>\n",
+       "      <td>Blue 234</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33</th>\n",
+       "      <td>11-0001425</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34</th>\n",
+       "      <td>11-0001425</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>53</th>\n",
+       "      <td>11-0007396</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>54</th>\n",
+       "      <td>11-0007396</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>80</th>\n",
+       "      <td>11-0010623</td>\n",
+       "      <td>rthrth</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>81</th>\n",
+       "      <td>11-0010623</td>\n",
+       "      <td>rthrth</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>166</th>\n",
+       "      <td>13-0000820</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>167</th>\n",
+       "      <td>13-0000820</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>186</th>\n",
+       "      <td>13-0031922</td>\n",
+       "      <td>Woody, brown</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>187</th>\n",
+       "      <td>13-0031922</td>\n",
+       "      <td>Woody, brown</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>188</th>\n",
+       "      <td>13-0031923</td>\n",
+       "      <td>Jed, yellow</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>189</th>\n",
+       "      <td>13-0031923</td>\n",
+       "      <td>Jed, yellow</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>264</th>\n",
+       "      <td>15-0014855</td>\n",
+       "      <td>JosÃ©phine</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>265</th>\n",
+       "      <td>15-0020320</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>266</th>\n",
+       "      <td>15-0020320</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>299</th>\n",
+       "      <td>16-0075828</td>\n",
+       "      <td>ok</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>300</th>\n",
+       "      <td>16-0075828</td>\n",
+       "      <td>ok</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>338</th>\n",
+       "      <td>19-0006124</td>\n",
+       "      <td>BO 19-02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>339</th>\n",
+       "      <td>19-0006124</td>\n",
+       "      <td>BO 19-02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>480</th>\n",
+       "      <td>10-0000105</td>\n",
+       "      <td>RTHA 5000-10-555</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>481</th>\n",
+       "      <td>10-0000105</td>\n",
+       "      <td>RTHA 5000-10-555</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>503</th>\n",
+       "      <td>17-0100773</td>\n",
+       "      <td>MUD11/20/17003</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>504</th>\n",
+       "      <td>17-0100773</td>\n",
+       "      <td>MUD11/20/17003</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>516</th>\n",
+       "      <td>15-0014855</td>\n",
+       "      <td>JosÃ©phine</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "0      10-0000095\n",
-       "1      10-0000096\n",
-       "2      10-0000106\n",
-       "5      10-0000115\n",
-       "6      10-0000116\n",
-       "          ...    \n",
-       "516    15-0014855\n",
-       "517    15-0064063\n",
-       "518    15-0065571\n",
-       "519    15-0065574\n",
-       "521    17-0007592\n",
-       "Name: Case Number, Length: 355, dtype: object"
+       "    Case Number        Patient ID\n",
+       "11   10-0000135          Blue 234\n",
+       "12   10-0000135          Blue 234\n",
+       "33   11-0001425               NaN\n",
+       "34   11-0001425               NaN\n",
+       "53   11-0007396               NaN\n",
+       "54   11-0007396               NaN\n",
+       "80   11-0010623            rthrth\n",
+       "81   11-0010623            rthrth\n",
+       "166  13-0000820               NaN\n",
+       "167  13-0000820               NaN\n",
+       "186  13-0031922      Woody, brown\n",
+       "187  13-0031922      Woody, brown\n",
+       "188  13-0031923       Jed, yellow\n",
+       "189  13-0031923       Jed, yellow\n",
+       "264  15-0014855        JosÃ©phine\n",
+       "265  15-0020320               NaN\n",
+       "266  15-0020320               NaN\n",
+       "299  16-0075828                ok\n",
+       "300  16-0075828                ok\n",
+       "338  19-0006124          BO 19-02\n",
+       "339  19-0006124          BO 19-02\n",
+       "480  10-0000105  RTHA 5000-10-555\n",
+       "481  10-0000105  RTHA 5000-10-555\n",
+       "503  17-0100773    MUD11/20/17003\n",
+       "504  17-0100773    MUD11/20/17003\n",
+       "516  15-0014855        JosÃ©phine"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df['Case Number']"
+    "# Print out the duplicated Case Numbers\n",
+    "df[df['Case Number'].duplicated(keep=False)][['Case Number', 'Patient ID']]"
    ]
   },
   {
