continueing to inspect duplicate case nubmers

--- a/pipeline_cleaning/guest_data_cleanup.ipynb
+++ b/pipeline_cleaning/guest_data_cleanup.ipynb
@@ -485,7 +485,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['10-0000135', '11-0001425', '11-0007396', '11-0010623', '13-0000820', '13-0031922', '13-0031923', '15-0020320', '16-0075828', '19-0006124', '10-0000105', '17-0100773', '15-0014855']\n",
+      "There are 13 duplicate case numbers\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Print out a list of the duplicated Case Numbers\n",
+    "# df[df['Case Number'].duplicated(keep=False)][['Case Number', 'Patient ID']]\n",
+    "# df[df['Case Number'].duplicated(keep=False)]['Case Number']\n",
+    "duplicate_case_numbers = list(df[df['Case Number'].duplicated()]['Case Number'])\n",
+    "print(duplicate_case_numbers)\n",
+    "print(f\"There are {len(duplicate_case_numbers)} duplicate case numbers\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -509,184 +532,158 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>Organization Name</th>\n",
+       "      <th>Organization Address</th>\n",
+       "      <th>Organization City</th>\n",
+       "      <th>Organization State</th>\n",
+       "      <th>Organization ZIP</th>\n",
+       "      <th>Jurisdiction</th>\n",
+       "      <th>Organization Country</th>\n",
+       "      <th>Phone</th>\n",
+       "      <th>Status</th>\n",
        "      <th>Case Number</th>\n",
-       "      <th>Patient ID</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Primary</th>\n",
+       "      <th>Suspected/Observed</th>\n",
+       "      <th>Admission Comments</th>\n",
+       "      <th>Rescue State</th>\n",
+       "      <th>Rescue Juristiction</th>\n",
+       "      <th>Rescue Address</th>\n",
+       "      <th>Other Rescue Information</th>\n",
+       "      <th>Latitude</th>\n",
+       "      <th>Longitude</th>\n",
+       "      <th>Elevation</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
+       "      <td>Visitor WILD-ONe Account</td>\n",
+       "      <td>1800 South Delphine Ave PO Box 1557</td>\n",
+       "      <td>Waynesboro</td>\n",
+       "      <td>VA</td>\n",
+       "      <td>22980</td>\n",
+       "      <td>Waynesboro (City)</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>(540) 942-9453</td>\n",
+       "      <td>Active</td>\n",
        "      <td>10-0000135</td>\n",
-       "      <td>Blue 234</td>\n",
+       "      <td>...</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Suspected</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NJ</td>\n",
+       "      <td>Middlesex County</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>40.502189</td>\n",
+       "      <td>-74.40659</td>\n",
+       "      <td>38.416168</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
+       "      <td>Visitor WILD-ONe Account</td>\n",
+       "      <td>1800 South Delphine Ave PO Box 1557</td>\n",
+       "      <td>Waynesboro</td>\n",
+       "      <td>VA</td>\n",
+       "      <td>22980</td>\n",
+       "      <td>Waynesboro (City)</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>(540) 942-9453</td>\n",
+       "      <td>Active</td>\n",
        "      <td>10-0000135</td>\n",
-       "      <td>Blue 234</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>33</th>\n",
-       "      <td>11-0001425</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Suspected</td>\n",
        "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>34</th>\n",
-       "      <td>11-0001425</td>\n",
+       "      <td>NJ</td>\n",
+       "      <td>Middlesex County</td>\n",
        "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>53</th>\n",
-       "      <td>11-0007396</td>\n",
        "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>54</th>\n",
-       "      <td>11-0007396</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>80</th>\n",
-       "      <td>11-0010623</td>\n",
-       "      <td>rthrth</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>81</th>\n",
-       "      <td>11-0010623</td>\n",
-       "      <td>rthrth</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>166</th>\n",
-       "      <td>13-0000820</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>167</th>\n",
-       "      <td>13-0000820</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>186</th>\n",
-       "      <td>13-0031922</td>\n",
-       "      <td>Woody, brown</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>187</th>\n",
-       "      <td>13-0031922</td>\n",
-       "      <td>Woody, brown</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>188</th>\n",
-       "      <td>13-0031923</td>\n",
-       "      <td>Jed, yellow</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>189</th>\n",
-       "      <td>13-0031923</td>\n",
-       "      <td>Jed, yellow</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>264</th>\n",
-       "      <td>15-0014855</td>\n",
-       "      <td>JosÃ©phine</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>265</th>\n",
-       "      <td>15-0020320</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>266</th>\n",
-       "      <td>15-0020320</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>299</th>\n",
-       "      <td>16-0075828</td>\n",
-       "      <td>ok</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>300</th>\n",
-       "      <td>16-0075828</td>\n",
-       "      <td>ok</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>338</th>\n",
-       "      <td>19-0006124</td>\n",
-       "      <td>BO 19-02</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>339</th>\n",
-       "      <td>19-0006124</td>\n",
-       "      <td>BO 19-02</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>480</th>\n",
-       "      <td>10-0000105</td>\n",
-       "      <td>RTHA 5000-10-555</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>481</th>\n",
-       "      <td>10-0000105</td>\n",
-       "      <td>RTHA 5000-10-555</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>503</th>\n",
-       "      <td>17-0100773</td>\n",
-       "      <td>MUD11/20/17003</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>504</th>\n",
-       "      <td>17-0100773</td>\n",
-       "      <td>MUD11/20/17003</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>516</th>\n",
-       "      <td>15-0014855</td>\n",
-       "      <td>JosÃ©phine</td>\n",
+       "      <td>40.502189</td>\n",
+       "      <td>-74.40659</td>\n",
+       "      <td>38.416168</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>2 rows × 37 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "    Case Number        Patient ID\n",
-       "11   10-0000135          Blue 234\n",
-       "12   10-0000135          Blue 234\n",
-       "33   11-0001425               NaN\n",
-       "34   11-0001425               NaN\n",
-       "53   11-0007396               NaN\n",
-       "54   11-0007396               NaN\n",
-       "80   11-0010623            rthrth\n",
-       "81   11-0010623            rthrth\n",
-       "166  13-0000820               NaN\n",
-       "167  13-0000820               NaN\n",
-       "186  13-0031922      Woody, brown\n",
-       "187  13-0031922      Woody, brown\n",
-       "188  13-0031923       Jed, yellow\n",
-       "189  13-0031923       Jed, yellow\n",
-       "264  15-0014855        JosÃ©phine\n",
-       "265  15-0020320               NaN\n",
-       "266  15-0020320               NaN\n",
-       "299  16-0075828                ok\n",
-       "300  16-0075828                ok\n",
-       "338  19-0006124          BO 19-02\n",
-       "339  19-0006124          BO 19-02\n",
-       "480  10-0000105  RTHA 5000-10-555\n",
-       "481  10-0000105  RTHA 5000-10-555\n",
-       "503  17-0100773    MUD11/20/17003\n",
-       "504  17-0100773    MUD11/20/17003\n",
-       "516  15-0014855        JosÃ©phine"
+       "           Organization Name                 Organization Address  \\\n",
+       "11  Visitor WILD-ONe Account  1800 South Delphine Ave PO Box 1557   \n",
+       "12  Visitor WILD-ONe Account  1800 South Delphine Ave PO Box 1557   \n",
+       "\n",
+       "   Organization City Organization State  Organization ZIP       Jurisdiction  \\\n",
+       "11        Waynesboro                 VA             22980  Waynesboro (City)   \n",
+       "12        Waynesboro                 VA             22980  Waynesboro (City)   \n",
+       "\n",
+       "   Organization Country           Phone  Status Case Number  ... Primary  \\\n",
+       "11        United States  (540) 942-9453  Active  10-0000135  ...      No   \n",
+       "12        United States  (540) 942-9453  Active  10-0000135  ...     Yes   \n",
+       "\n",
+       "   Suspected/Observed Admission Comments Rescue State Rescue Juristiction  \\\n",
+       "11          Suspected                NaN           NJ    Middlesex County   \n",
+       "12          Suspected                NaN           NJ    Middlesex County   \n",
+       "\n",
+       "   Rescue Address Other Rescue Information   Latitude Longitude  Elevation  \n",
+       "11            NaN                      NaN  40.502189 -74.40659  38.416168  \n",
+       "12            NaN                      NaN  40.502189 -74.40659  38.416168  \n",
+       "\n",
+       "[2 rows x 37 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Print out the duplicated Case Numbers\n",
-    "df[df['Case Number'].duplicated(keep=False)][['Case Number', 'Patient ID']]"
+    "df[df['Case Number'] == duplicate_case_numbers[0]]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "11",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "File \u001b[0;32m~/.virtualenvs/wildlife/lib/python3.10/site-packages/pandas/core/indexes/base.py:3805\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   3804\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m-> 3805\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_engine\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcasted_key\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   3806\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m err:\n",
+      "File \u001b[0;32mindex.pyx:167\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
+      "File \u001b[0;32mindex.pyx:196\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
+      "File \u001b[0;32mpandas/_libs/hashtable_class_helper.pxi:7081\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
+      "File \u001b[0;32mpandas/_libs/hashtable_class_helper.pxi:7089\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;31mKeyError\u001b[0m: 11",
+      "\nThe above exception was the direct cause of the following exception:\n",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[31], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mdf\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m11\u001b[39;49m\u001b[43m]\u001b[49m\n",
+      "File \u001b[0;32m~/.virtualenvs/wildlife/lib/python3.10/site-packages/pandas/core/frame.py:4102\u001b[0m, in \u001b[0;36mDataFrame.__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   4100\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcolumns\u001b[38;5;241m.\u001b[39mnlevels \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m1\u001b[39m:\n\u001b[1;32m   4101\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_getitem_multilevel(key)\n\u001b[0;32m-> 4102\u001b[0m indexer \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcolumns\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkey\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   4103\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m is_integer(indexer):\n\u001b[1;32m   4104\u001b[0m     indexer \u001b[38;5;241m=\u001b[39m [indexer]\n",
+      "File \u001b[0;32m~/.virtualenvs/wildlife/lib/python3.10/site-packages/pandas/core/indexes/base.py:3812\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   3807\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(casted_key, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;129;01mor\u001b[39;00m (\n\u001b[1;32m   3808\u001b[0m         \u001b[38;5;28misinstance\u001b[39m(casted_key, abc\u001b[38;5;241m.\u001b[39mIterable)\n\u001b[1;32m   3809\u001b[0m         \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28many\u001b[39m(\u001b[38;5;28misinstance\u001b[39m(x, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m casted_key)\n\u001b[1;32m   3810\u001b[0m     ):\n\u001b[1;32m   3811\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m InvalidIndexError(key)\n\u001b[0;32m-> 3812\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(key) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01merr\u001b[39;00m\n\u001b[1;32m   3813\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m:\n\u001b[1;32m   3814\u001b[0m     \u001b[38;5;66;03m# If we have a listlike key, _check_indexing_error will raise\u001b[39;00m\n\u001b[1;32m   3815\u001b[0m     \u001b[38;5;66;03m#  InvalidIndexError. Otherwise we fall through and re-raise\u001b[39;00m\n\u001b[1;32m   3816\u001b[0m     \u001b[38;5;66;03m#  the TypeError.\u001b[39;00m\n\u001b[1;32m   3817\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_check_indexing_error(key)\n",
+      "\u001b[0;31mKeyError\u001b[0m: 11"
+     ]
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
