"standardize the roads"

--- a/pipeline_cleaning/VDOT Carcass Removal/vdot_cleaning.ipynb
+++ b/pipeline_cleaning/VDOT Carcass Removal/vdot_cleaning.ipynb
@@ -2012,7 +2012,7 @@
     }
    ],
    "source": [
-    "# Find the names for thr routes\n",
+    "# Find the names for the routes\n",
     "VDOTcarcass['Route'].unique()"
    ]
   },
