--- a/pipeline_cleaning/VDOT Carcass Removal/vdot_cleaning.ipynb
+++ b/pipeline_cleaning/VDOT Carcass Removal/vdot_cleaning.ipynb
@@ -1,18 +1,28 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 111,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "import numpy as np "
+    "# TO DO\n",
+    "* Final data set needs to have the additional columns that are present in the VDOTCarcass.csv dataset. The gis team broke up the timestamps in order to enable finer grain filtering\n",
+    "\n",
+    "* We need to output a csv to return to the gis team so they can update their map that includes the transformations on the route and wildlife columns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2850,7 +2860,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
